composer.json fix

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "bin-dir": "bin"
     },
     "autoload": {
-        "psr-4": { "Payum\\Ecommpay": "" }
+        "psr-4": { "Payum\\Ecommpay\\": "" }
     },
     "extra": {
         "branch-alias": {
